# DUKPT_Key_Management

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
DUKPT_Originator/: DUKPT_Originator.sln
DUKPT_Originator/DUKPT_Originator/: CMakeLists.txt  DUKPT_Originator.vcxproj  DUKPT_Originator.vcxproj.filters
DUKPT_Originator/DUKPT_Originator/Debug/: vc141.idb
DUKPT_Originator/DUKPT_Originator/Debug/DUKPT_Originator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DUKPT_Originator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DUKPT_Originator/DUKPT_Originator/inc/: config.h  dukpt.h
DUKPT_Originator/DUKPT_Originator/src/: TDES.c  dukpt.c  main.c  main2.c
DUKPT_Originator/Debug/: DUKPT_Originator.ilk
DUKPT_Receiver/: DUKPT_Receiver.sln
DUKPT_Receiver/DUKPT_Receiver/: DUKPT.h  DUKPT_Receiver.vcxproj  DUKPT_Receiver.vcxproj.filters
DUKPT_Receiver/DUKPT_Receiver/Debug/: vc141.idb
DUKPT_Receiver/DUKPT_Receiver/Debug/DUKPT_Receiver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DUKPT_Receiver.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DUKPT_Receiver/DUKPT_Receiver/inc/: DES.h
DUKPT_Receiver/DUKPT_Receiver/src/: DUKPT.c  main.c
DUKPT_Receiver/Debug/: DUKPT_Receiver.ilk
inc/: TDES.h
src/: DES.c  dukpt.c  main.c
